bpo-37112: Allow compile to work on AST with positional only arguments with defaults (GH-13697)